# dycovec

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: par_1d.rs  par_2d.rs  par_comparison.rs  seq_1d.rs  seq_2d.rs  seq_comparison.rs
src/: lib.rs  segment.rs
