[package]
name = "dycovec"
version = "0.1.0"
authors = ["Grayson Burton <ocornoc@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A dynamically-allocated, concurrent vector"
repository = "https://github.com/ocornoc/dycovec"
include = ["src/**/*", "LICENSE-*", "README.md"]

[dev-dependencies]
criterion = "0.3"
sharded-slab = "0.1"
evmap = "10"
evmap-derive = "0.2"
rayon = "1.5"
crossbeam = "0.8"
parking_lot = "0.11"

[[bench]]
name = "seq_comparison"
harness = false

[[bench]]
name = "par_comparison"
harness = false
